<resources>
    <string name="app_name">MAD Laboratory 2</string>
    <string name="activity_main">Home</string>
    <string name="show_profile">Show Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>

    <string name="profile_picture">Profile picture</string>
    <string name="send_email">Send e-mail</string>
    <string name="show_location">Show location</string>
    <string name="lent_books">Lent books</string>
    <string name="borrowed_books">Borrowed books</string>
    <string name="to_be_returned">To be returned</string>

    <string name="hint_username">Username</string>
    <string name="hint_biography">Biography</string>
    <string name="hint_location">Location</string>

    <string name="default_username">Test</string>
    <string name="default_city">Unknown city</string>
    <string name="default_biography">No biography inserted yet</string>

    <string name="camera_option">Take picture from camera</string>
    <string name="gallery_option">Choose picture from gallery</string>
    <string name="reset_option">Reset the default picture</string>

    <string name="invalid_username">Username must not be empty</string>
    <string name="invalid_location_wrong">Location can contain only alphabetic characters</string>
    <string name="invalid_location_empty">Location must not be empty</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="incorrect_values">Some fields contain invalid data.\nPlease, check them</string>
    <string name="failed_obtain_picture">Something went wrong while obtaining the picture</string>
    <string name="failed_save_data">Something went wrong while saving your data</string>
    <string name="failed_load_data">Something went wrong while retrieving your data. You will be signed out.</string>

    <string name="number_zero">0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="anonymous">Not logged in</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="explore">Explore</string>
    <string name="add_book">Add Book</string>
    <string name="profile">Your profile</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_welcome">Welcome</string>
    <string name="sign_in_welcome_back">Welcome back</string>
    <string name="sign_in_cancelled">Sign In cancelled</string>
    <string name="sign_in_no_internet_connection">Sign In failed. Please check your internet connection</string>
    <string name="sign_in_unknown_error">An unknown error occurred during Sign In</string>
    <string name="sign_out_succeeded">Sign Out succeeded</string>
    <string name="sign_out_failed">Sign Out failed</string>
    <string name="fui_name_hint">Username</string>

    <string name="complete_profile">Review and complete your information if you want</string>

    <string name="hint_editionYear">Edition Year</string>
    <string name="hint_condition">Book conditions</string>
    <string name="hint_publisher">Publisher</string>
    <string name="hint_author">Author</string>
    <string name="hint_title">Title</string>
    <string name="auto_fill">Auto-Fill</string>
    <string name="hint_isbn">ISBN</string>
    <string name="add_book_search_isbn">Search ISBN</string>
    <string name="book_author">Author</string>
    <string name="book_title">Title</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_edition_year">Edition Year</string>
    <string name="add_book_isbn_query_failed">ISBN query failed</string>
    <string name="add_book_isbn_query_no_results">No results found</string>
    <string name="add_book_invalid_isbn">invalid ISBN</string>


    <string name="ok" translatable="false">Ok</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="saving_data">Saving your personal data. Please wait…</string>
    <string name="code_retrieved">Code Retrieved:</string>

    <string name="facebook_application_id" translatable="false">417996611977813</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb417996611977813</string>
    <string name="add_book_confirm">Add</string>
    <string name="add_book_cancel">Cancel</string>
    <string name="add_book_isbn_loading_title">Loading</string>
    <string name="add_book_isbn_loading_message">Retrieving ISBN info</string>
    <string name="rescan">Rescan</string>
    <string name="add_book_scan">Scan</string>
    <string name="add_book_query_ok">Information retrieved correctly</string>
    <string name="add_book_saved">Book saved correctly</string>
    <string name="add_book_error">I was not able to save book information</string>
    <string name="hint_language">Language</string>

    <string name="add_book_condition_mint">Mint</string>
    <string name="add_book_condition_good">Good</string>
    <string name="add_book_condition_fair">Fair</string>
    <string name="add_book_condition_poor">Poor</string>
    <string name="title_activity_tag_editor">TagEditorActivity</string>
    <string name="ab_field_must_not_be_empty">Fields title and author must not be empty</string>
    <string name="autocomplete">Autocomplete</string>
    <string name="hint_tags">Tags</string>
    <string name="hint_author_add">Add author</string>
    <string name="ab_add_tag">Add Tag</string>
    <string name="would_take_picture">Would you like to add a picture?</string>
    <string name="take_picture_camera">Yes, take from camera</string>
    <string name="take_picture_gallery">Yes, take from gallery</string>
    <string name="no">No</string>
    <string name="operation_aborted">Operation aborted</string>
</resources>
