<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ab_input_book_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ab_title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ab_author_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_author"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:paddingTop="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ab_publisher_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_publisher"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingEnd="-2dp"
            android:paddingStart="8dp">

            <TextView
                style="@style/InputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_editionYear" />

            <Spinner
                android:id="@+id/ab_edition_year_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/conditions"
                android:prompt="@string/hint_editionYear" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ab_language_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_language"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>

    <me.gujun.android.taggroup.TagGroup
        android:id="@+id/tag_group"
        style="@style/TagGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:focusedByDefault="false"
        android:inputType="text"
        app:atg_isAppendMode="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/ab_add_book"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:enabled="false"
            android:text="@string/add_book_confirm" />

        <Button
            android:id="@+id/ab_clear_fields"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/add_book_cancel" />
    </LinearLayout>
</LinearLayout>