<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddBookFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ab_isbn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="13">

                        <EditText
                            android:id="@+id/ab_edit_isbn"
                            android:layout_width="300dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingLeft="4dp"
                            android:hint="@string/hint_isbn"
                            android:inputType="textNoSuggestions"
                            android:maxLength="13" />
                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:layout_width="44dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="300dp"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/hint_username"
                        android:src="@drawable/ic_photo_camera_white_24dp"
                        android:tint="@color/colorPrimary" />

                </RelativeLayout>
                <!--View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"/-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ab_fill_isbn"
                        android:text="@string/auto_fill"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ab_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        app:counterMaxLength="13">

                        <EditText
                            android:id="@+id/ab_edit_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_title"
                            android:inputType="textNoSuggestions"
                            android:maxLength="@integer/max_length_username"
                            android:nextFocusLeft="@id/ep_input_username"
                            android:nextFocusUp="@id/ep_input_username" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ab_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="13">

                        <EditText
                            android:id="@+id/ab_edit_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_author"
                            android:inputType="textNoSuggestions"
                            android:maxLength="@integer/max_length_username"
                            android:nextFocusLeft="@id/ep_input_username"
                            android:nextFocusUp="@id/ep_input_username" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ab_publisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="13">

                        <EditText
                            android:id="@+id/ab_edit_publisher"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_publisher"
                            android:inputType="textNoSuggestions"
                            android:maxLength="@integer/max_length_username"
                            android:nextFocusLeft="@id/ep_input_username"
                            android:nextFocusUp="@id/ep_input_username" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ab_editionYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="13">

                        <EditText
                            android:id="@+id/ab_edit_editionYear"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:hint="@string/hint_editionYear"
                            android:inputType="numberDecimal"
                            android:maxLength="@integer/max_length_username"
                            android:nextFocusLeft="@id/ep_input_username"
                            android:nextFocusUp="@id/ep_input_username"
                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="5dp">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ab_condition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterMaxLength="13">

                        <EditText
                            android:id="@+id/ab_edit_condition"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_condition"
                            android:inputType="textNoSuggestions"
                            android:maxLength="@integer/max_length_username"
                            android:nextFocusLeft="@id/ep_input_username"
                            android:nextFocusUp="@id/ep_input_username" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</FrameLayout>